Ticketing fixed, admin fixed

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{{title}}}</title>
+    <title>ShopnhourBE</title>
     <meta name="color-scheme" content="dark">
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
@@ -11,14 +11,14 @@
 </head>
 <body class="splash-page-home make-it-normal">
 
-    <header class="title-bar-container other-bar is-frozen make-it-semi-back make-it-normal grid-container-2c-by-1r">
+    <header class="title-bar-container other-bar is-frozen make-it-semi-back make-it-normal grid-container-2c66-by-1r">
         <div class="navbar-brand">
             <a class="navbar-item" href="/">
-                <img class="logo-image" src="/static/shopnhour_blue.png" alt="Shopnhour Store Logo" width="115px">
+                <img class="logo-image" src="/static/shopnhour_blue.png" alt="Shopnhour Store Logo">
             </a>
         </div>
 
-        <div class="grid-container-6c-by-1r make-it-rounded small-section">
+        <div class="grid-container-2c-by-1r make-it-rounded small-section make-it-small">
             <div class="grid-container-2c-by-1r">
                 <a class="navbar-item make-it-rounded make-it-dark" href="/products">
                     <span><i class="fas fa-box-open small-section"></i></span><p>Products</p>
@@ -46,7 +46,7 @@
                 </div>
             {{else}}
                 <a class="navbar-item make-it-rounded make-it-dark" href="/login/">
-                    <i class="fas fa-key small-section"></i> Login
+                    <i class="fas fa-key small-section"></i><p>Log in</p>
                 </a>
             {{/if}}
         </div>
