--- a/src/views/admin.handlebars
+++ b/src/views/admin.handlebars
@@ -4,54 +4,62 @@
     <meta charset="UTF-8" />
     <title>Admin Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
 </head>
-    <body>
-        <h2 class=" section make-it-left make-it-white-back make-it-dark make-it-small  make-it-rounded-top make-it-normal">Admin Dashboard</h2>
-        <section class="section">
+<body>
+    <h2 class="section make-it-left make-it-white-back make-it-dark make-it-small make-it-rounded-top make-it-normal">
+        Admin Dashboard
+    </h2>
 
+    <section class="section">
         <div class="columns is-multiline is-centered">
             <!-- Add Product -->
             <div class="column is-2 section">
                 <a href="/forms/add-product" class="navbar-item has-text-centered make-it-rounded make-it-semi-back">
-                <span class="icon is-large"><i class="fas fa-plus fa-2x"></i></span>
-                <p class="section make-it-small make-it-normal">Add Product</p>
+                    <span class="icon is-large"><i class="fas fa-plus fa-2x"></i></span>
+                    <p class="section make-it-small make-it-normal">Add Product</p>
                 </a>
             </div>
 
             <!-- Delete Product -->
             <div class="column is-2 section">
                 <a href="/forms/delete-product" class="navbar-item has-text-centered make-it-rounded make-it-semi-back">
-                <span class="icon is-large"><i class="fas fa-trash-alt fa-2x"></i></span>
-                <p class="section make-it-small make-it-normal">Delete Product</p>
+                    <span class="icon is-large"><i class="fas fa-trash-alt fa-2x"></i></span>
+                    <p class="section make-it-small make-it-normal">Delete Product</p>
                 </a>
             </div>
 
             <!-- Real-Time Products -->
             <div class="column is-2 section">
                 <a href="/realtime/products" class="navbar-item has-text-centered make-it-rounded make-it-semi-back">
-                <span class="icon is-large"><i class="fas fa-boxes fa-2x"></i></span>
-                <p class="section make-it-small make-it-normal">Real-Time Products</p>
+                    <span class="icon is-large"><i class="fas fa-boxes fa-2x"></i></span>
+                    <p class="section make-it-small make-it-normal">Real-Time Products</p>
                 </a>
             </div>
 
             <!-- Real-Time Carts -->
             <div class="column is-2 section">
                 <a href="/realtime/carts" class="navbar-item has-text-centered make-it-rounded make-it-semi-back">
-                <span class="icon is-large"><i class="fas fa-shopping-cart fa-2x"></i></span>
-                <p class="section make-it-small make-it-normal">Real-Time Carts</p>
+                    <span class="icon is-large"><i class="fas fa-shopping-cart fa-2x"></i></span>
+                    <p class="section make-it-small make-it-normal">Real-Time Carts</p>
                 </a>
             </div>
 
             <!-- All Carts View -->
             <div class="column is-2 section">
                 <a href="/carts" class="navbar-item has-text-centered make-it-rounded make-it-semi-back">
-                <span class="icon is-large"><i class="fas fa-clipboard-list fa-2x"></i></span>
-                <p class="section make-it-small make-it-normal">All Carts</p>
+                    <span class="icon is-large"><i class="fas fa-clipboard-list fa-2x"></i></span>
+                    <p class="section make-it-small make-it-normal">All Carts</p>
                 </a>
             </div>
-            </section>
-        </div>
 
-    </body>
+            <!-- Ticket List View (NEW) -->
+            <div class="column is-2 section">
+                <a href="/tickets" class="navbar-item has-text-centered make-it-rounded make-it-semi-back">
+                    <span class="icon is-large"><i class="fas fa-receipt fa-2x"></i></span>
+                    <p class="section make-it-small make-it-normal">All Tickets</p>
+                </a>
+            </div>
+        </div>
+    </section>
+</body>
 </html>
