--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -27,19 +27,19 @@
 
             <div class="columns is-multiline section">
                 <div class="column is-6 make-it-white">
-                    <p class="card-title-container make-it-semi make-it-rounded-top make-it-dark-back">> Navegación y uso</p>
+                    <p class="card-title-container make-it-white make-it-rounded-top make-it-dark-back">> Navegación y uso</p>
                     <div class="section make-it-semi-back make-it-dark make-it-small  make-it-rounded-bottom">
                         - N/A
                     </div>
                 </div>
 
                 <div class="column is-6 make-it-white">
-                    <p class="card-title-container make-it-semi make-it-rounded-top make-it-dark-back">> Rutas</p>
+                    <p class="card-title-container make-it-white make-it-rounded-top make-it-dark-back">> Rutas</p>
                     <div class=" make-it-dark make-it-small  make-it-rounded-bottom make-it-semi-back">
 
                         <div class="section">
                             <br>
-                            <p class="make-it-normal">Vistas</p>
+                            <p class="make-it-normal make-it-dark">Vistas</p>
                             <br>
                             <p><b>/</b> - Esta página.</p>
                             <p><a href="/products" class="make-it-dark"><b>/products</b> - Catálogo de productos completo.</p></a>
