--- a/src/views/productsStatic.handlebars
+++ b/src/views/productsStatic.handlebars
@@ -53,20 +53,22 @@
                 {{#if products.length}}
                     {{#each products}}
                         <div class="column is-12-mobile is-3-desktop">
-                            <div class="make-it-rounded-top card-title-container make-it-white-back make-it-left">
+                            <div class="card-title-container make-it-dark-back make-it-left make-it-white">
                                 <div>
                                     {{this.title}}
                                 </div>
                             </div>
                             <div class="make-it-semi-back">
-                                <div class="section">
+                                <div class="small-section">
                                     <div class="make-it-rounded">
                                         <img src={{this.imageURL}} alt={{this.title}}>
                                     </div>
                                     <div class="card-category-badge-prebuilt make-it-left make-it-rounded">
                                             {{this.category}}
                                     </div>
-                                    <div class="columns make-it-white-back make-it-rounded make-it-dark make-it-small section">
+                                    <br>
+                                    <div class="columns make-it-white-back make-it-rounded make-it-dark make-it-small small-section">
+                                        
                                         <div class="column is-6 make-it-left">
                                             <p><b>Price:</b>${{this.price}}</p>
                                             <p><b>Stock:</b> {{this.stock}}</p>
