--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -18,19 +18,20 @@
             </a>
         </div>
 
-        <div class="grid-container-2c-by-1r make-it-rounded small-section make-it-small">
+        <div class="grid-container-3c-by-1r-special make-it-rounded small-section make-it-normal">
+            <div></div>
             <div class="grid-container-2c-by-1r">
                 <a class="navbar-item make-it-rounded make-it-dark" href="/products">
-                    <p>Products</p>
+                    <span><i class="fas fa-box-open small-section"></i>Products</span>
                 </a>
 
                 {{#if user}}
                     <a class="navbar-item make-it-rounded make-it-dark" href="/carts/{{user.cartId}}">
-                        <p>Cart</p>
+                        <span><i class="fas fa-shopping-cart small-section"></i>Cart</span>
                     </a>
                 {{else}}
                     <a class="navbar-item make-it-rounded make-it-dark" href="/guest-cart">
-                        </span><p>Cart</p>
+                        <span><i class="fas fa-shopping-cart small-section"></i>Cart</span>
                     </a>
                 {{/if}}
             </div>
@@ -38,18 +39,18 @@
             {{#if user}}
                 <div class="grid-container-2c-by-1r">
                     <a class="navbar-item make-it-rounded make-it-dark" href="/current/">
-                        <span><i class="fas fa-user small-section"></i></span><p>{{user.username}}</p>
+                        <span><i class="fas fa-user small-section"></i>{{user.username}}</span>
                     </a>
                     <a class="navbar-item make-it-rounded make-it-dark" href="/logout/">
-                        <p>Log out</p>
+                        <span><i class="fas fa-sign-out-alt small-section"></i>Log out</span>
                     </a>
                 </div>
             {{else}}
-                <div class="grid-container-2c-by-1r">
-                    <a class="navbar-item make-it-rounded make-it-dark" href="/login/">
-                        <p>Log in</p>
-                    </a>
-                </div>
+            <div class="grid-container-2c-by-1r">
+                <a class="navbar-item make-it-rounded make-it-dark" href="/login/">
+                    <span><i class="fas fa-key small-section"></i>Log in</span>
+                </a>
+            </div>
             {{/if}}
         </div>
     </header>
