Multiple improvements with carts, product display and menu. Moved log out into the user view. Readme updated.

--- a/src/views/addProduct.handlebars
+++ b/src/views/addProduct.handlebars
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <form class="container" action="/forms/add-product" method="POST" enctype="multipart/form-data">
+    <form class="" action="/forms/add-product" method="POST" enctype="multipart/form-data">
         <h2 class="section make-it-white">Add a New Product</h2>
         <div class="section box make-it-semi-back ">
             <label class="make-it-dark make-it-small  " for="title">Title:</label>
