--- a/src/views/productsStatic.handlebars
+++ b/src/views/productsStatic.handlebars
@@ -7,7 +7,7 @@
     <meta name="color-scheme" content="dark">
 </head>
 <body>
-    <h2 class=" section make-it-left make-it-white-back make-it-dark make-it-rounded-top make-it-normal">Product List - Static view</h2>
+    <h2 class=" section make-it-left make-it-white-back make-it-dark make-it-rounded-top make-it-normal">Products</h2>
 
     <script>
         const isLoggedIn = {{#if user}}true{{else}}false{{/if}};
