--- a/src/views/ticketsStatic.handlebars
+++ b/src/views/ticketsStatic.handlebars
@@ -33,7 +33,7 @@
 
     <!-- Ticket List -->
     <section class="section">
-        <div class="container">
+        <div class="">
             <div class="columns is-multiline is-centered">
                 {{#if tickets.length}}
                     {{#each tickets}}
