--- a/src/views/current.handlebars
+++ b/src/views/current.handlebars
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
 <body>
-    <h2 class="section make-it-left make-it-white-back make-it-dark make-it-rounded-top">User Information</h2>
+    <h2 class="section make-it-left make-it-white-back make-it-dark make-it-rounded-top">User menu</h2>
 
     <section class="section">
         <div class="box make-it-semi-back make-it-rounded">
             <div id="userInfo" class="content make-it-dark">Loading...</div>
             <div id="adminButtonContainer" class="mt-4"></div>
+            <div class="mt-4">
+                <a href="/logout" class="button is-danger is-light">Logout</a>
+            </div>
         </div>
     </section>
 
