--- a/src/views/admin.handlebars
+++ b/src/views/admin.handlebars
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
-    <h2 class="section make-it-left make-it-white-back make-it-dark make-it-small make-it-rounded-top make-it-normal">
+    <h2 class="section make-it-left make-it-white-back make-it-dark make-it-rounded-top make-it-normal">
         Admin Dashboard
     </h2>
 
