--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -11,7 +11,7 @@
     <h2 class="section make-it-left make-it-white-back make-it-dark make-it-rounded-top">Proyecto de Programación Backend II</h2>
 
     <section class="section make-it-normal">
-        <div class="container">
+        <div class="">
             <div class="make-it-rounded make-it-semi-back make-it-normal make-it-left">
                 <p class="card-title-container make-it-white make-it-dark-back">Sobre este proyecto</p>
                 <br>
