--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -20,16 +20,19 @@
                 
                 <form class="make-it-center" id="loginForm">
                     <div class="make-it-dark  section" for="email">
-                        <p class="make-it-dark">E-mail</p>
+                        <p class="make-it-dark small-section">E-mail</p>
                         <input class="input " name="email" type="email" required />
                     </div>
 
                     <div class="make-it-dark  section " for="password">
-                        <p class="make-it-dark">Password</p>
+                        <p class="make-it-dark small-section">Password</p>
                         <input class="input " name="password" type="password" required />
                     </div>
 
-                    <button class="section button " type="submit">Login</button>
+                    <div class="section">
+                        <button class="button is-primary make-it-dark make-it-normal" type="submit">Login</button>
+                    </div>
+                    
                 </form>
             </div>
         </div>
